DEV-1933 Datatypes for Lilac output